Edited line 219 of /html/nizi.html

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -216,7 +216,7 @@
 			    <h4 id="Ayn">アイン</h4>
 			  </div>
 			  <div class="sprite">
-			    <img class="border" src="../img/sprite/sprite_アイン.png" alt="アインのスプライト" title="アインのスプライト" style="width: 256px; height: 256px;">
+			    <img class="border" src="../img/sprite/アイン.png" alt="アインのスプライト" title="アインのスプライト" style="width: 256px; height: 256px;">
 				<p class="caption">アインのスプライト</p>
 			  </div>
 			  <div class="pride">
