--- a/html/gallery/Kiyoi.html
+++ b/html/gallery/Kiyoi.html
@@ -35,13 +35,13 @@
 	  <article>
       <section class="section">
         <!-- 造化神録に戻る（Return to the Record） -->
-        <a href="../nizi.html#SatokiNijikawa">←　造化神録に戻る</a>
+        <a href="../nizi.html#Kiyoi">←　造化神録に戻る</a>
         <!-- 現在レファレンス（Current Ref Sheet） -->
         <div class="gallery">
           <h2 style="text-align: left;">レファレンス</h2><hr>
           <div class="flex-gallery">
             <div class="art-ref">
-              <img class="border" src="../../img/ref/SatokiRefCurrent.png" alt="郷鬼のレファレンス" style="width: *; height: 256px;">
+              <img class="border" src="../../img/ref/KiyoiRefCurrent.png" alt="清のレファレンス" style="width: *; height: 256px;">
             </div>
           </div>
         </div>
@@ -50,34 +50,8 @@
           <h2 style="text-align: left;">美術品</h2><hr>
           <div class="flex-gallery">
             <div class="art-gallery">
-              <img class="border" src="../../img/gallery/SatokiNijikawa/虹川郷鬼（PC-98版）.png" alt="虹川郷鬼（PC-98版）" style="width: 256px; height: 256px;">
-              <p class="caption">虹川郷鬼（PC-98版）</p>
-            </div>
-            <div class="art-gallery">
-              <img class="border" src="../../img/gallery/SatokiNijikawa/郷鬼（スライムの姿）.png" alt="郷鬼（スライムの姿）" style="width: 256px; height: 256px;">
-              <p class="caption">郷鬼（スライムの姿）</p>
-            </div>
-            <div class="art-gallery">
-              <img class="border" src="../../img/gallery/SatokiNijikawa/ポグ.gif" alt="ポグ" style="width: 256px; height: 256px;">
-              <p class="caption">ポグ</p>
-            </div>
-            <div class="art-gallery">
-              <img class="border" src="../../img/gallery/SatokiNijikawa/Satoki Sprite.png" alt="郷鬼のスプライト" style="width: 256px; height: 256px;">
-              <p class="caption">郷鬼のスプライト</p>
-            </div>
-            <div class="art-gallery">
-              <img class="border" src="../../img/gallery/SatokiNijikawa/Satoki Sprite - Bra & Diaper.png" alt="郷鬼のスプライト・ブラジャーとオムツ" style="width: 256px; height: 256px;">
-              <p class="caption">郷鬼のスプライト・ブラジャーとオムツ</p>
-            </div>
-          </div>
-          <div class="flex-gallery">
-            <div class="art-gallery">
-              <img class="border" src="../../img/gallery/SatokiNijikawa/hold your pride flag!.png" alt="トランスゲンダーの旗を持つ郷鬼" style="width: 256px; height: 256px;">
-              <p class="caption">トランスゲンダーの旗を持つ郷鬼</p>
-            </div>
-            <div class="art-gallery">
-              <img class="border" src="../../img/gallery/SatokiNijikawa/Throne.png" alt="王座に座る郷鬼" style="width: 256px; height: 256px;">
-              <p class="caption">王座に座る郷鬼</p>
+              <img class="border" src="../../img/gallery/Kiyoi/清（PC-98版）.png" alt="清（PC-98版）" style="width: 256px; height: 256px;">
+              <p class="caption">清（PC-98版）</p>
             </div>
           </div>
         </div>
