--- a/html/nizi.html
+++ b/html/nizi.html
@@ -302,31 +302,21 @@
             <br>
           </div>
           <div class="body">
-            <p>
-              錯誤（さくご）<br>
-              Cuowu
-            </p>
-            <p>
-              種族：機人のドラゴン<br>
-              能力：神のような速度でコードを解析する程度の能力
-            </p>
-            <p>
-              性別：インターセックス（完全な機能的な雌雄の生殖器官）<br>
-              性自認：ジェンダーフリュイドとジェンダーフラックス；<ruby>分身<rt>アルター</rt></ruby>変わる<br>
-              代名詞：彼女／いずれ（she/any）；<ruby>分身<rt>アルター</rt></ruby>変わる<br>
-              雌雄性：性行為を虫唾が走ったアロ＝エイス；<ruby>分身<rt>アルター</rt></ruby>変わる
-            </p>
-            <p>
-              ——<ruby>分身<rt>アルター</rt></ruby>の性自認と代名詞と雌雄性——<br>
-              錯誤：性自認はジェンダーフリュイドとジェンダーフラックスである。好んだ代名詞は彼女／いずれ（she/any）である。雌雄性は性行為を虫唾が走ったアロ＝エイスである。<br>
-              新星：性自認はノンバイナリー・ガールである。好んだ代名詞は<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>ゼル</rt></ruby>（xe/xer）である。<br>
-              タモードヴァーラム：性自認はノンバイナリーである。好んだ代名詞は奴（they/them）である。雌雄性はグレイアセクシャルである。<br>
-              佰萬：性自認はアジェンダーである。好んだ代名詞は<ruby>奴<rt>イト</rt></ruby>／<ruby>奴<rt>イツ</rt></ruby>（it/its）である。雌雄性はパンロマンティックである。
-            </p>
-            <p>
-              誕生日：０３２３年６月２９日<br>
-              年齢：２２裁（何らかの形で子供と呼ばれると気分を害する）
-            </p>
+            <p>錯誤（さくご）<br>
+            Cuowu</p>
+            <p>種族：機人のドラゴン<br>
+            能力：神のような速度でコードを解析する程度の能力</p>
+            <p>性別：インターセックス（完全な機能的な雌雄の生殖器官）<br>
+            性自認：ジェンダーフリュイドとジェンダーフラックス；<ruby>分身<rt>アルター</rt></ruby>変わる<br>
+            代名詞：彼女／いずれ（she/any）；<ruby>分身<rt>アルター</rt></ruby>変わる<br>
+            雌雄性：性行為を虫唾が走ったアロ＝エイス；<ruby>分身<rt>アルター</rt></ruby>変わる</p>
+            <p>——<ruby>分身<rt>アルター</rt></ruby>の性自認と代名詞と雌雄性——<br>
+            錯誤：性自認はジェンダーフリュイドとジェンダーフラックスである。好んだ代名詞は彼女／いずれ（she/any）である。雌雄性は性行為を虫唾が走ったアロ＝エイスである。<br>
+            新星：性自認はノンバイナリー・ガールである。好んだ代名詞は<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>ゼル</rt></ruby>（xe/xer）である。<br>
+            タモードヴァーラム：性自認はノンバイナリーである。好んだ代名詞は奴（they/them）である。雌雄性はグレイアセクシャルである。<br>
+            佰萬：性自認はアジェンダーである。好んだ代名詞は<ruby>奴<rt>イト</rt></ruby>／<ruby>奴<rt>イツ</rt></ruby>（it/its）である。雌雄性はパンロマンティックである。</p>
+            <p>誕生日：０３２３年６月２９日<br>
+            年齢：２２裁（何らかの形で子供と呼ばれると気分を害する）</p>
             <p>　プログラマーとして働く優しい機人のドラゴンである。<strong>彼女の子供のような身長をからかうな！</strong>名前の意味は中国語に「過ち」と言う。</p>
             <p>　錯誤は、筋肉や臓器がかなり急速なペースで劣化する原因となる命にかかわる病気で生まれた。奴のために長くて主に健康的な生活を確保する為に、両親は、心臓と脳を除いて、臓器を補うサイバネティック・インプラントを許可する事に同意した。錯誤の心臓と脳は完全に機械であり、機人になっている。この病気を患った結果、錯誤は不幸にも不安障害を発症し、特に病院の近くにいるとパニック・アタックを起こしやすくなった。ありがたいことに、この不安障害のために薬を飲む事を忘れない。これらの命を救うインプラントの不幸な副作用は、彼女の成長が完全に停止し、１０２．５㎝の高さ、または６歳の女の子の平均身長で立ち往生している事。園児と間違えられる事が多いので嫌い。</p>
             <p>　一部のインプラントが機能しなかった為、錯誤は腰から下が麻痺し、移動に車椅子に頼らざるを得なくなった。しかし、このあまり動けないことが、彼女を太らせる原因にもなっている。麻痺と筋肉の衰えが重なり、失禁に悩まされ、おむつを着用せざるを得なくなった。錯誤のコンピューターデスクは、車椅子を収納する為に特別に作られていました。</p>
@@ -348,6 +338,10 @@
 		      <div class="heading">
 		  	    <h4 id="HapPEmoShun">ハップ・P・エモ＝ション</h4>
 		      </div>
+          <div class="art-chara">
+            <img class="border" src="../img/art/ハップ・P・エモ＝ション.png" alt="ハップ" style="width: 256px; height: 256px;">
+            <p class="caption">ハップ</p>
+          </div>
 		      <div class="pride">
 		  	    <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
 		  	    <p class="caption">代名詞：she/they</p>
@@ -374,6 +368,10 @@
 		      <div class="heading">
 		  	    <h4 id="Idola">イドラ</h4>
 		      </div>
+          <div class="art-chara">
+            <img class="border" src="../img/art/イドラ.png" alt="イドラ" style="width: 256px; height: 256px;">
+            <p class="caption">イドラ</p>
+          </div>
 		      <div class="pride">
 		  	    <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
 		  	    <p class="caption">代名詞：</p>
@@ -398,15 +396,25 @@
 		      <div class="heading">
 			      <h4 id="ElisabedPirtskhalaishvili">エリサベト・ピルツハライシュヴィリ</h4>
 			    </div>
-			    <div class="pride">
-			      <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-			      <p class="caption">代名詞：</p>
-			      <img class="border" src="../img/pride/" alt="" title="" style="width: 200px; height: 125px;">
-			      <br>
-			    </div>
+          <div class="art-chara">
+            <img class="border" src="../img/art/エリサベト・ピルツハライシュヴィリ.png" alt="エリサベト" style="width: 256px; height: 256px;">
+            <p class="caption">エリサベト</p>
+          </div>
+          <div class="pride">
+            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="caption">代名詞：she/they/hu</p>
+            <img class="border" src="../img/pride/Demigirl.png" alt="デミ女（Demigirl）" title="デミ女（Demigirl）" style="width: 200px; height: 125px;">
+            <br>
+            <img class="border" src="../img/pride/Abrosexual.png" alt="アブロセクシャル（Abrosexual）" title="アブロセクシャル（Abrosexual）" style="width: 200px; height: 125px;">
+            <br>
+          </div>
 			    <div class="body">
 			      <p>エリサベト・ヒディルベギシュヴィリ＝ガルセヴァニシュヴィリ＝ピルツハライシュヴィリ<br>
 			      Elisabed Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili</p>
+            <p>種族：化け狸</p>
+            <p>性自認：デミ女<br>
+            代名詞：she/they/hu<br>
+            雌雄性：アブロセクシャル</p>
 			      <p>　<ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			      <p>※グルジア文字に「<span lang="ka" class="font-georgian">ელისაბედ ხიდირბეგიშვილი-გარსევანიშვილი-ფირცხალაიშვილი</span>」で書く。</p>
 			    </div>
@@ -417,6 +425,10 @@
 		      <div class="heading">
 			      <h4 id="OlhaYukhymivnaLytvyna">オルハ・ユヒミウナ・リトウィナ</h4>
 			    </div>
+          <div class="art-chara">
+            <img class="border" src="../img/art/オルハ・ユヒミウナ・リトウィナ.png" alt="オルハ" style="width: 256px; height: 256px;">
+            <p class="caption">オルハ</p>
+          </div>
 			    <div class="pride">
 			      <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
 			      <p class="caption">代名詞：</p>
@@ -437,6 +449,10 @@
 		      <div class="heading">
 			      <h4 id="MaengSongHee">孟聖姫</h4>
 			    </div>
+          <div class="art-chara">
+            <img class="border" src="../img/art/孟聖姫.png" alt="聖姫" style="width: 256px; height: 256px;">
+            <p class="caption">聖姫</p>
+          </div>
 			    <div class="pride">
 			      <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
 			      <p class="caption">代名詞：</p>
@@ -457,6 +473,10 @@
 		      <div class="heading">
 			      <h4 id="KishihimeNuwesaka">ぬゑさか岸姫</h4>
 			    </div>
+          <div class="art-chara">
+            <img class="border" src="../img/art/ぬゑさか岸姫.png" alt="岸姫" style="width: 256px; height: 256px;">
+            <p class="caption">岸姫</p>
+          </div>
 			    <div class="pride">
 			      <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
 			      <p class="caption">代名詞：she/he</p>
@@ -477,6 +497,10 @@
 		      <div class="heading">
 			      <h4 id="IlyinishnaMakarovnaObraztsova">イリニシュナ・マカロフナ・オブラズツォファ</h4>
 			    </div>
+          <div class="art-chara">
+            <img class="border" src="../img/art/イリニシュナ・マカロフナ・オブラズツォファ.png" alt="イリィ" style="width: 256px; height: 256px;">
+            <p class="caption">イリィ</p>
+          </div>
 			    <div class="pride">
 			      <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
 			      <p class="caption">代名詞：</p>
@@ -496,6 +520,10 @@
 		      <div class="heading">
 			      <h4 id="SandaKhaingTheingiHtet">サンダ・カイン・テインギ・テ</h4>
 			    </div>
+          <div class="art-chara">
+            <img class="border" src="../img/art/サンダ・カイン・テインギ・テ.png" alt="サンダ" style="width: 256px; height: 256px;">
+            <p class="caption">サンダ</p>
+          </div>
 			    <div class="pride">
 			      <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
 			      <p class="caption">代名詞：</p>
@@ -515,6 +543,10 @@
 		      <div class="heading">
 			      <h4 id="ScarlettWilliams">スカーレット・ウィリアムズ</h4>
 			    </div>
+          <div class="art-chara">
+            <img class="border" src="../img/art/スカーレット・ウィリアムズ.png" alt="スカーレット" style="width: 256px; height: 256px;">
+            <p class="caption">スカーレット</p>
+          </div>
 			    <div class="pride">
 			      <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
 			      <p class="caption">代名詞：</p>
