Fixed img pointer to only point to a single placeholder image

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -169,7 +169,7 @@
             <h4 id="Youko">妖狐</h4>
           </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/妖狐.png" alt="妖狐" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/art/fill.png" alt="妖狐" style="width: 256px; height: 256px;">
             <p class="caption">妖狐</p>
           </div>
           <div class="pride">
@@ -209,7 +209,7 @@
             <h4 id="Animus">アニムス</h4>
           </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/アニムス.png" alt="アニムス" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/art/fill.png" alt="アニムス" style="width: 256px; height: 256px;">
             <p class="caption">アニムス</p>
           </div>
           <div class="pride">
@@ -233,10 +233,10 @@
 		      <div class="heading">
 		  	    <h4 id="Ayn">アイン</h4>
 		      </div>
-		      <div class="sprite">
-		  	    <img class="border" src="../img/sprite/アイン.png" alt="アインのスプライト" style="width: 256px; height: 256px;">
-		  	    <p class="caption">アインのスプライト</p>
-		      </div>
+          <div class="art-chara">
+            <img class="border" src="../img/art/Ayn.png" alt="アイン" style="width: 256px; height: 256px;">
+            <p class="caption">アイン</p>
+          </div>
 		      <div class="pride">
 		  	    <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
 		  	    <p class="caption">代名詞：they/it</p>
@@ -284,7 +284,7 @@
             <h4 id="Cuowu">錯誤</h4>
           </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/錯誤.png" alt="錯誤" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/art/fill.png" alt="錯誤" style="width: 256px; height: 256px;">
             <p class="caption">錯誤</p>
           </div>
           <div class="pride">
@@ -339,7 +339,7 @@
 		  	    <h4 id="HapPEmoShun">ハップ・P・エモ＝ション</h4>
 		      </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/ハップ・P・エモ＝ション.png" alt="ハップ" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/art/fill.png" alt="ハップ" style="width: 256px; height: 256px;">
             <p class="caption">ハップ</p>
           </div>
 		      <div class="pride">
@@ -369,7 +369,7 @@
 		  	    <h4 id="Idola">イドラ</h4>
 		      </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/イドラ.png" alt="イドラ" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/art/fill.png" alt="イドラ" style="width: 256px; height: 256px;">
             <p class="caption">イドラ</p>
           </div>
 		      <div class="pride">
@@ -397,7 +397,7 @@
 			      <h4 id="ElisabedPirtskhalaishvili">エリサベト・ピルツハライシュヴィリ</h4>
 			    </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/エリサベト・ピルツハライシュヴィリ.png" alt="エリサベト" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/art/fill.png" alt="エリサベト" style="width: 256px; height: 256px;">
             <p class="caption">エリサベト</p>
           </div>
           <div class="pride">
@@ -426,7 +426,7 @@
 			      <h4 id="OlhaYukhymivnaLytvyna">オルハ・ユヒミウナ・リトウィナ</h4>
 			    </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/オルハ・ユヒミウナ・リトウィナ.png" alt="オルハ" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/art/fill.png" alt="オルハ" style="width: 256px; height: 256px;">
             <p class="caption">オルハ</p>
           </div>
 			    <div class="pride">
@@ -450,7 +450,7 @@
 			      <h4 id="MaengSongHee">孟聖姫</h4>
 			    </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/孟聖姫.png" alt="聖姫" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/art/fill.png" alt="聖姫" style="width: 256px; height: 256px;">
             <p class="caption">聖姫</p>
           </div>
 			    <div class="pride">
@@ -474,7 +474,7 @@
 			      <h4 id="KishihimeNuwesaka">ぬゑさか岸姫</h4>
 			    </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/ぬゑさか岸姫.png" alt="岸姫" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/art/fill.png" alt="岸姫" style="width: 256px; height: 256px;">
             <p class="caption">岸姫</p>
           </div>
 			    <div class="pride">
@@ -498,7 +498,7 @@
 			      <h4 id="IlyinishnaMakarovnaObraztsova">イリニシュナ・マカロフナ・オブラズツォファ</h4>
 			    </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/イリニシュナ・マカロフナ・オブラズツォファ.png" alt="イリィ" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/art/fill.png" alt="イリィ" style="width: 256px; height: 256px;">
             <p class="caption">イリィ</p>
           </div>
 			    <div class="pride">
@@ -521,7 +521,7 @@
 			      <h4 id="SandaKhaingTheingiHtet">サンダ・カイン・テインギ・テ</h4>
 			    </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/サンダ・カイン・テインギ・テ.png" alt="サンダ" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/art/fill.png" alt="サンダ" style="width: 256px; height: 256px;">
             <p class="caption">サンダ</p>
           </div>
 			    <div class="pride">
@@ -544,7 +544,7 @@
 			      <h4 id="ScarlettWilliams">スカーレット・ウィリアムズ</h4>
 			    </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/スカーレット・ウィリアムズ.png" alt="スカーレット" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/art/fill.png" alt="スカーレット" style="width: 256px; height: 256px;">
             <p class="caption">スカーレット</p>
           </div>
 			    <div class="pride">
