Just some stuffs

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -73,10 +73,10 @@
 				    重さ：３０．４２㎏</p>
 				    <p>誕生日：１０月１６日<br>
 				    年齢：１０５歳（生活年齢）；２５歳（身体と同じ）（※）</p>
-			      <p>　あたいだね～。 \^w^</p>
-				    <p>　奈落にある等活地獄の最後の姫である。システムの<ruby>主<rt>ホスト</rt></ruby>であるね。</p>
-				    <p>　また、神々をむさぼり食う癖がある。（少なくとも食べようとする）</p>
-				    <p>　体格が小さいため、子供と間違われる事もある。</p>
+			      <p>あたいだね～。 \^w^</p>
+				    <p>奈落にある等活地獄の最後の姫である。システムの<ruby>主<rt>ホスト</rt></ruby>であるね。</p>
+				    <p>また、神々をむさぼり食う癖がある。（少なくとも食べようとする）</p>
+				    <p>体格が小さいため、子供と間違われる事もある。</p>
 				    <p>※年齢は、高緊張でスライドする。</p>
 				    <br>
 				    <a href="./gallery/SatokiNijikawa.html" target="topframe">美術館へ行きますか？</a>
@@ -114,8 +114,8 @@
 				    重さ：５０．３０㎏</p>
 				    <p>誕生日：９月７日<br>
 				    年齢：２７歳</p>
-				    <p>　噛むと他人を狼獣に変える事ができる<ruby>半狐半狸<rt>ハーフブラッド</rt></ruby>である。名前はチベット語で「キツネ」を意味する。</p>
-				    <p>　かつては郷鬼に敵対的だったが、その後は落ち着いてきた。ちなみに、通称にある「保護者」は自称であるよ。</p>
+				    <p>噛むと他人を狼獣に変える事ができる<ruby>半狐半狸<rt>ハーフブラッド</rt></ruby>である。名前はチベット語で「キツネ」を意味する。</p>
+				    <p>かつては郷鬼に敵対的だったが、その後は落ち着いてきた。ちなみに、通称にある「保護者」は自称であるよ。</p>
 				    <p>※チベット文字に「<span lang="bo" class="font-tibetan">ཝ་མོ་</span>」を書く。ワイリー方式に「<span lang="bo-Latn" class="font-latin">wa mo</span>」を書く。</p>
 				    <br>
 				    <a href="./gallery/Wamo.html" target="topframe">美術館へ行きますか？</a>
@@ -150,7 +150,7 @@
 				    重さ：？？？㎏</p>
 				    <p>誕生日：９月３０日<br>
 				    年齢：１５歳</p>
-				    <p>　とてつもなく優しいノンバイナリーの天狗である。心は残念ながら１２歳のそれに退行しています……。</p>
+				    <p>とてつもなく優しいノンバイナリーの天狗である。心は残念ながら１２歳のそれに退行しています……。</p>
 				    <br>
 				    <a href="./gallery/Kiyoi.html" target="topframe">美術館へ行きますか？</a>
 				    <br>
@@ -169,7 +169,7 @@
             <h4 id="Youko">妖狐</h4>
           </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/fill.png" alt="妖狐" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/fill.png" alt="妖狐" style="width: 256px; height: 256px;">
             <p class="caption">妖狐</p>
           </div>
           <div class="pride">
@@ -190,7 +190,7 @@
             <p>性自認：ノンバイナリーとトランスフェミニン<br>
             代名詞：彼女／奴（she/they）<br>
             雌雄性：アセクシャル</p>
-            <p>　自分の服を作るフェネックである。あたいの自己ケモノであるね。</p>
+            <p>自分の服を作るフェネックである。あたいの自己ケモノであるね。</p>
             <br>
             <a href="./gallery/Youko.html" target="topframe">美術館へ行きますか？</a>
             <br>
@@ -209,7 +209,7 @@
             <h4 id="Animus">アニムス</h4>
           </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/fill.png" alt="アニムス" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/fill.png" alt="アニムス" style="width: 256px; height: 256px;">
             <p class="caption">アニムス</p>
           </div>
           <div class="pride">
@@ -284,7 +284,7 @@
             <h4 id="Cuowu">錯誤</h4>
           </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/fill.png" alt="錯誤" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/fill.png" alt="錯誤" style="width: 256px; height: 256px;">
             <p class="caption">錯誤</p>
           </div>
           <div class="pride">
@@ -317,16 +317,16 @@
             佰萬：性自認はアジェンダーである。好んだ代名詞は<ruby>奴<rt>イト</rt></ruby>／<ruby>奴<rt>イツ</rt></ruby>（it/its）である。雌雄性はパンロマンティックである。</p>
             <p>誕生日：０３２３年６月２９日<br>
             年齢：２２裁（何らかの形で子供と呼ばれると気分を害する）</p>
-            <p>　プログラマーとして働く優しい機人のドラゴンである。<strong>彼女の子供のような身長をからかうな！</strong>名前の意味は中国語に「過ち」と言う。</p>
-            <p>　錯誤は、筋肉や臓器がかなり急速なペースで劣化する原因となる命にかかわる病気で生まれた。奴のために長くて主に健康的な生活を確保する為に、両親は、心臓と脳を除いて、臓器を補うサイバネティック・インプラントを許可する事に同意した。錯誤の心臓と脳は完全に機械であり、機人になっている。この病気を患った結果、錯誤は不幸にも不安障害を発症し、特に病院の近くにいるとパニック・アタックを起こしやすくなった。ありがたいことに、この不安障害のために薬を飲む事を忘れない。これらの命を救うインプラントの不幸な副作用は、彼女の成長が完全に停止し、１０２．５㎝の高さ、または６歳の女の子の平均身長で立ち往生している事。園児と間違えられる事が多いので嫌い。</p>
-            <p>　一部のインプラントが機能しなかった為、錯誤は腰から下が麻痺し、移動に車椅子に頼らざるを得なくなった。しかし、このあまり動けないことが、彼女を太らせる原因にもなっている。麻痺と筋肉の衰えが重なり、失禁に悩まされ、おむつを着用せざるを得なくなった。錯誤のコンピューターデスクは、車椅子を収納する為に特別に作られていました。</p>
-            <p>　錯誤の脳は人工的だが、<ruby>神経多様性<rt>ニューロダイバージェント</rt></ruby>があり、最も知識のある神経科学者でさえ困惑している。自閉症とＡＤＨＤを持っている彼女は、いつもプロジェクトを始めているが、いつも終わらせているわけではないよね。寝屋には、古いプロジェクトが入った未接続のハードドライブが沢山あるとしよう。</p>
-            <p>　病気のせいで、錯誤は医学的に一人で生活する事ができず、今も両親と暮らしている。また、住み込みの看護師がいて、錯誤が薬を飲んでいる事を確認し（かわいそうな少女は様々な理由で少なくとも２０種類の薬を服用している）、サイバネティックコンポーネント（特に脳と心臓は、手術が必要なため、病院に連れて行ってメンテナンスできるように、重い鎮静剤が必要である）のメンテナンスを手伝ってくれる。しかし、主に寝室にこもり、普段は様々なＣＳプロジェクトに没頭している。</p>
-            <p>　錯誤のコード解析能力は<ruby>計り知れない速さ<rt>はなはだはやい</rt></ruby>で、誰にも気づかれずにバグを見つけて対処できる為、仕事に役立っている。</p>
-            <p>　何をするにしても、<strong>彼女に<ruby>現在興味<rt>ハイパーフィクセイション</rt></ruby>について尋ねないでください</strong>。なぜなら、そのことについて話すのをやめないからだ。</p>
-            <p>　錯誤の脳は本質的にミニコンピューターである為、これはいくつかのかなり興味深い癖をもたらす。たとえば、錯誤は、ステレオタイプ化やその他の素早い思考を物理的に行う事ができない。彼女の思考は全てゆっくりと論理的であり、コンピューター科学とサイバネティック科学がどのように機能するかについて深い理解につながる。この癖はまた、錯誤を<ruby>現在興味<rt>ハイパーフィクセイション</rt></ruby>に助けます（つまり、実際に彼女の直感の物理的な欠如のために量子力学と天体物理学を非常によく理解しており、彼女が様々な科学を効率的に理解できるようにする）。しかし、錯誤は<ruby>多元的な存在<rt>プルラリティ</rt></ruby>も経験しており、現在４人の<ruby>分身<rt>アルター</rt></ruby>がいる。この<ruby>分身<rt>アルター</rt></ruby>は：<ruby>主人<rt>ホスト</rt></ruby>の錯誤（好んだ代名詞は彼女／いずれかの代名詞である）と<ruby>新星<rt>しんせい</rt></ruby>（好んだ代名詞は<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>ゼル</rt></ruby>である）とタモードヴァーラム（マラヤーラム語「<span lang="ml" class="font-malayalam">തമോദ്വാരം</span>」、好んだ代名詞は奴である）と<ruby>佰萬<rt>ひゃくまん</rt></ruby>（好んだ代名詞は<ruby>奴<rt>イト</rt></ruby>／<ruby>奴<rt>イツ</rt></ruby>である）。現在彼女の<ruby>多元的な存在<rt>プルラリティ</rt></ruby>の原因は、錯誤以外の誰にも知られていない。眼の色を制御する為のコードは、誰が利便性の問題としてフロントしているかを示すのに役立ちます（錯誤はソースコードを自分で書いた）。</p>
-            <p>　健康上の理由で学校を中退せざるを得なくなる前、錯誤の最高の科目は数学と科学であった。最悪の科目は、様々な肺の問題と喉の問題に起因する言語障害のために、実際には国語であった。それを補う為に、普段はオンラインチャットや手話でコミュニケーションをとっている。錯誤は手話を使うが、聴覚はほとんどのドラゴンよりも鋭いである。皮肉なことに、言語障害にもかかわらず、多くの言語に非常に堪能であるという事である。</p>
-            <p>　錯誤が抱えている健康上の問題と状態の非網羅的なリスト：<ruby>龍筋肉悪化症<rt>りゅうきんにくあっかしょう</rt></ruby>（筋肉を悪化させるドラゴンの変性疾患である。サイバネティック・インプラントのない末期症状である）と<ruby>龍内臓悪化症<rt>りゅうないぞうあっかしょう</rt></ruby>（内臓を悪化させるドラゴンの変性疾患である。サイバネティック・インプラントのない末期症状である）と自閉症とＡＤＨＤと尿失禁と便失禁（おむつを必要とし、筋肉が悪化する事によって引き起こされる）と腰脊髄麻痺（車椅子を必要とする）と喘息（主に肺内のサイバネティック・インプラントのおかげで対処されている）と深刻なてんかん（脳が人工であるにも関わらず。脳にはセンサーが内蔵されており、発作が起きるたびに看護師に警告を発す）と軽度な光過敏性（太陽の下で外出すると極端な偏頭痛を起こす）とビタミンＤ欠乏症（日光にさらされない為）と完全な免疫不全（いつも寝屋にとどまる理由の一部である）と様々な喉の問題（その結果、恒久的な栄養チューブを持ち、多くの音声障害を発症した）と不安障害など。</p>
+            <p>プログラマーとして働く優しい機人のドラゴンである。<strong>彼女の子供のような身長をからかうな！</strong>名前の意味は中国語に「過ち」と言う。</p>
+            <p>錯誤は、筋肉や臓器がかなり急速なペースで劣化する原因となる命にかかわる病気で生まれた。奴のために長くて主に健康的な生活を確保する為に、両親は、心臓と脳を除いて、臓器を補うサイバネティック・インプラントを許可する事に同意した。錯誤の心臓と脳は完全に機械であり、機人になっている。この病気を患った結果、錯誤は不幸にも不安障害を発症し、特に病院の近くにいるとパニック・アタックを起こしやすくなった。ありがたいことに、この不安障害のために薬を飲む事を忘れない。これらの命を救うインプラントの不幸な副作用は、彼女の成長が完全に停止し、１０２．５㎝の高さ、または６歳の女の子の平均身長で立ち往生している事。園児と間違えられる事が多いので嫌い。</p>
+            <p>一部のインプラントが機能しなかった為、錯誤は腰から下が麻痺し、移動に車椅子に頼らざるを得なくなった。しかし、このあまり動けないことが、彼女を太らせる原因にもなっている。麻痺と筋肉の衰えが重なり、失禁に悩まされ、おむつを着用せざるを得なくなった。錯誤のコンピューターデスクは、車椅子を収納する為に特別に作られていました。</p>
+            <p>錯誤の脳は人工的だが、<ruby>神経多様性<rt>ニューロダイバージェント</rt></ruby>があり、最も知識のある神経科学者でさえ困惑している。自閉症とＡＤＨＤを持っている彼女は、いつもプロジェクトを始めているが、いつも終わらせているわけではないよね。寝屋には、古いプロジェクトが入った未接続のハードドライブが沢山あるとしよう。</p>
+            <p>病気のせいで、錯誤は医学的に一人で生活する事ができず、今も両親と暮らしている。また、住み込みの看護師がいて、錯誤が薬を飲んでいる事を確認し（かわいそうな少女は様々な理由で少なくとも２０種類の薬を服用している）、サイバネティックコンポーネント（特に脳と心臓は、手術が必要なため、病院に連れて行ってメンテナンスできるように、重い鎮静剤が必要である）のメンテナンスを手伝ってくれる。しかし、主に寝室にこもり、普段は様々なＣＳプロジェクトに没頭している。</p>
+            <p>錯誤のコード解析能力は<ruby>計り知れない速さ<rt>はなはだはやい</rt></ruby>で、誰にも気づかれずにバグを見つけて対処できる為、仕事に役立っている。</p>
+            <p>何をするにしても、<strong>彼女に<ruby>現在興味<rt>ハイパーフィクセイション</rt></ruby>について尋ねないでください</strong>。なぜなら、そのことについて話すのをやめないからだ。</p>
+            <p>錯誤の脳は本質的にミニコンピューターである為、これはいくつかのかなり興味深い癖をもたらす。たとえば、錯誤は、ステレオタイプ化やその他の素早い思考を物理的に行う事ができない。彼女の思考は全てゆっくりと論理的であり、コンピューター科学とサイバネティック科学がどのように機能するかについて深い理解につながる。この癖はまた、錯誤を<ruby>現在興味<rt>ハイパーフィクセイション</rt></ruby>に助けます（つまり、実際に彼女の直感の物理的な欠如のために量子力学と天体物理学を非常によく理解しており、彼女が様々な科学を効率的に理解できるようにする）。しかし、錯誤は<ruby>多元的な存在<rt>プルラリティ</rt></ruby>も経験しており、現在４人の<ruby>分身<rt>アルター</rt></ruby>がいる。この<ruby>分身<rt>アルター</rt></ruby>は：<ruby>主人<rt>ホスト</rt></ruby>の錯誤（好んだ代名詞は彼女／いずれかの代名詞である）と<ruby>新星<rt>しんせい</rt></ruby>（好んだ代名詞は<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>ゼル</rt></ruby>である）とタモードヴァーラム（マラヤーラム語「<span lang="ml" class="font-malayalam">തമോദ്വാരം</span>」、好んだ代名詞は奴である）と<ruby>佰萬<rt>ひゃくまん</rt></ruby>（好んだ代名詞は<ruby>奴<rt>イト</rt></ruby>／<ruby>奴<rt>イツ</rt></ruby>である）。現在彼女の<ruby>多元的な存在<rt>プルラリティ</rt></ruby>の原因は、錯誤以外の誰にも知られていない。眼の色を制御する為のコードは、誰が利便性の問題としてフロントしているかを示すのに役立ちます（錯誤はソースコードを自分で書いた）。</p>
+            <p>健康上の理由で学校を中退せざるを得なくなる前、錯誤の最高の科目は数学と科学であった。最悪の科目は、様々な肺の問題と喉の問題に起因する言語障害のために、実際には国語であった。それを補う為に、普段はオンラインチャットや手話でコミュニケーションをとっている。錯誤は手話を使うが、聴覚はほとんどのドラゴンよりも鋭いである。皮肉なことに、言語障害にもかかわらず、多くの言語に非常に堪能であるという事である。</p>
+            <p>錯誤が抱えている健康上の問題と状態の非網羅的なリスト：<ruby>龍筋肉悪化症<rt>りゅうきんにくあっかしょう</rt></ruby>（筋肉を悪化させるドラゴンの変性疾患である。サイバネティック・インプラントのない末期症状である）と<ruby>龍内臓悪化症<rt>りゅうないぞうあっかしょう</rt></ruby>（内臓を悪化させるドラゴンの変性疾患である。サイバネティック・インプラントのない末期症状である）と自閉症とＡＤＨＤと尿失禁と便失禁（おむつを必要とし、筋肉が悪化する事によって引き起こされる）と腰脊髄麻痺（車椅子を必要とする）と喘息（主に肺内のサイバネティック・インプラントのおかげで対処されている）と深刻なてんかん（脳が人工であるにも関わらず。脳にはセンサーが内蔵されており、発作が起きるたびに看護師に警告を発す）と軽度な光過敏性（太陽の下で外出すると極端な偏頭痛を起こす）とビタミンＤ欠乏症（日光にさらされない為）と完全な免疫不全（いつも寝屋にとどまる理由の一部である）と様々な喉の問題（その結果、恒久的な栄養チューブを持ち、多くの音声障害を発症した）と不安障害など。</p>
             <p>——新星について</p>
             <p>——タモードヴァーラムについて</p>
             <p>——佰萬について</p>
@@ -339,7 +339,7 @@
 		  	    <h4 id="HapPEmoShun">ハップ・P・エモ＝ション</h4>
 		      </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/fill.png" alt="ハップ" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/fill.png" alt="ハップ" style="width: 256px; height: 256px;">
             <p class="caption">ハップ</p>
           </div>
 		      <div class="pride">
@@ -359,7 +359,7 @@
 		  	    性自認：アジェンダー<br>
 		  	    代名詞：彼女／奴<br>
 		  	    雌雄性：性行為を虫唾が走ったアセクシャル</p>
-		  	    <p>　感情の神である。感情を感じる場合による、耳の髪と翼の色は変わる。通常の色は<span style="color: #FBD569;">金色</span>である。</p>
+		  	    <p>感情の神である。感情を感じる場合による、耳の髪と翼の色は変わる。通常の色は<span style="color: #FBD569;">金色</span>である。</p>
 		      </div>
 		      <br>
 		    </div>
@@ -369,7 +369,7 @@
 		  	    <h4 id="Idola">イドラ</h4>
 		      </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/fill.png" alt="イドラ" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/fill.png" alt="イドラ" style="width: 256px; height: 256px;">
             <p class="caption">イドラ</p>
           </div>
 		      <div class="pride">
@@ -382,6 +382,8 @@
 		  	    <p>製品の名前：IDOLA-0C1D（イドラ－ゼロシーいちディー）<br>
 		  	    人間のような名前：イドラ　Idola</p>
 		  	    <p>種族：アンドロイド・戦争モデル</p>
+            <p>性自認：<br>
+            代名詞：</p>
 		      </div>
 		      <br>
 		    </div>
@@ -397,7 +399,7 @@
 			      <h4 id="ElisabedPirtskhalaishvili">エリサベト・ピルツハライシュヴィリ</h4>
 			    </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/fill.png" alt="エリサベト" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/fill.png" alt="エリサベト" style="width: 256px; height: 256px;">
             <p class="caption">エリサベト</p>
           </div>
           <div class="pride">
@@ -415,7 +417,7 @@
             <p>性自認：デミ女<br>
             代名詞：she/they/hu<br>
             雌雄性：アブロセクシャル</p>
-			      <p>　<ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
+			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			      <p>※グルジア文字に「<span lang="ka" class="font-georgian">ელისაბედ ხიდირბეგიშვილი-გარსევანიშვილი-ფირცხალაიშვილი</span>」で書く。</p>
 			    </div>
 			    <br>
@@ -426,7 +428,7 @@
 			      <h4 id="OlhaYukhymivnaLytvyna">オルハ・ユヒミウナ・リトウィナ</h4>
 			    </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/fill.png" alt="オルハ" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/fill.png" alt="オルハ" style="width: 256px; height: 256px;">
             <p class="caption">オルハ</p>
           </div>
 			    <div class="pride">
@@ -439,7 +441,9 @@
 			      <p>八苦の幽霊リボン</p>
 			      <p>オルハ・ユヒミウナ・リトウィナ＝コスチュチェンコ<br>
 			      Olha Yukhymivna Lytvyna-Kostyuchenko</p>
-			      <p>　<ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
+            <p>性自認：<br>
+            代名詞：</p>
+			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			      <p>※キリル文字に「<span lang="uk" class="font-cyrillic">Олга Юхимівна Литвина-Костюченко</span>」で書く。</p>
 			    </div>
 			    <br>
@@ -450,7 +454,7 @@
 			      <h4 id="MaengSongHee">孟聖姫</h4>
 			    </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/fill.png" alt="聖姫" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/fill.png" alt="聖姫" style="width: 256px; height: 256px;">
             <p class="caption">聖姫</p>
           </div>
 			    <div class="pride">
@@ -463,7 +467,9 @@
 			      <p>東方風の刀</p>
 			      <p>孟　聖姫（メン・ソンヒ）<br>
 			      Maeng Song-Hee</p>
-			      <p>　<ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
+            <p>性自認：<br>
+            代名詞：</p>
+			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			      <p>※ハングルに「<span lang="ko" class="font-hangul">맹성희</span>」と<ruby>漢字<rt>ハンジャ</rt></ruby>に「<span lang="ko-Hani" class="font-hanja">孟聖姬</span>」で書く。</p>
 			    </div>
 			    <br>
@@ -474,7 +480,7 @@
 			      <h4 id="KishihimeNuwesaka">ぬゑさか岸姫</h4>
 			    </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/fill.png" alt="岸姫" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/fill.png" alt="岸姫" style="width: 256px; height: 256px;">
             <p class="caption">岸姫</p>
           </div>
 			    <div class="pride">
@@ -488,7 +494,8 @@
 			      <p>ぬゑさか　岸姫（ぬゑさか　きしひめ）<br>
 			      Nuwesaka Kishihime</p>
 			      <p>種族：鵺</p>
-			      <p>　<ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
+            <p>代名詞：she/he</p>
+			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			    </div>
 			    <br>
 		    </div>
@@ -498,7 +505,7 @@
 			      <h4 id="IlyinishnaMakarovnaObraztsova">イリニシュナ・マカロフナ・オブラズツォファ</h4>
 			    </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/fill.png" alt="イリィ" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/fill.png" alt="イリィ" style="width: 256px; height: 256px;">
             <p class="caption">イリィ</p>
           </div>
 			    <div class="pride">
@@ -510,7 +517,9 @@
 			    <div class="body">
 			      <p>イリニシュナ・マカロフナ・オブラズツォファ＝スルチェフスカヤ<br>
 			      Ilyinishna Makarovna Obraztsova-Sluchevskaya</p>
-			      <p>　<ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
+            <p>性自認：<br>
+            代名詞：</p>
+			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			      <p>※キリル文字に「<span lang="ru" class="font-cyrillic">Ильинишна Макаровна Образцова-Случевская</span>」で書く。</p>
 			    </div>
 			    <br>
@@ -521,7 +530,7 @@
 			      <h4 id="SandaKhaingTheingiHtet">サンダ・カイン・テインギ・テ</h4>
 			    </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/fill.png" alt="サンダ" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/fill.png" alt="サンダ" style="width: 256px; height: 256px;">
             <p class="caption">サンダ</p>
           </div>
 			    <div class="pride">
@@ -533,7 +542,9 @@
 			    <div class="body">
 			      <p>サンダ・カイン・テインギ・テ<br>
 			      Sanda Khaing Theingi Htet</p>
-			      <p>　<ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
+            <p>性自認：<br>
+            代名詞：</p>
+			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			      <p>※ビルマ文字に「<span lang="my" class="font-myanmar">စန္ဒာခိုင်သိင်္ဂီထက်</span>」で書く。MLCTS式に「<span lang="my-Latn" class="font-latin">Canda Hkuing Singgi Htak</span>」で書く。</p>
 			    </div>
 			    <br>
@@ -544,7 +555,7 @@
 			      <h4 id="ScarlettWilliams">スカーレット・ウィリアムズ</h4>
 			    </div>
           <div class="art-chara">
-            <img class="border" src="../img/art/fill.png" alt="スカーレット" style="width: 256px; height: 256px;">
+            <img class="border" src="../img/fill.png" alt="スカーレット" style="width: 256px; height: 256px;">
             <p class="caption">スカーレット</p>
           </div>
 			    <div class="pride">
@@ -557,7 +568,9 @@
 			      <p>スカーレット・ウィリアムズ<br>
 			      Scarlett Williams</p>
 			      <p>種族：吸血鬼</p>
-			      <p>　<ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
+            <p>性自認：<br>
+            代名詞：</p>
+			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			    </div>
 			    <br>
 		    </div>
