Added art gallery for Animus

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -225,6 +225,9 @@
             <p>性自認：女<br>
             代名詞：彼女（she/her）<br>
             雌雄性：オムニセクシャル</p>
+            <br>
+            <a href="./gallery/Animus.html" target="topframe">美術館へ行きますか？</a>
+            <br>
           </div>
           <br>
         </div>
