Added art gallery for 'Ayn

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -253,6 +253,9 @@
 		  	    <p>性自認：ノンバイナリー<br>
 		  	    代名詞：奴／<ruby>奴<rt>イト</rt></ruby>（they/it）</p>
 		  	    <p>アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">عَيْن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʿAyn</span>」を書く。</p>
+            <br>
+            <a href="./gallery/Ayn.html" target="topframe">美術館へ行きますか？</a>
+            <br>
 		  	  </div>
 		  	  <br>
 		  	</div>
