Added art gallery for Cuòwù

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -339,6 +339,9 @@
             <p>——新星について</p>
             <p>——タモードヴァーラムについて</p>
             <p>——佰萬について</p>
+            <br>
+            <a href="./gallery/Cuowu.html" target="topframe">美術館へ行きますか？</a>
+            <br>
           </div>
           <br>
         </div>
