Added art gallery for Hap P. Emo-Shun

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -372,6 +372,9 @@
 		  	    代名詞：彼女／奴<br>
 		  	    雌雄性：性行為を虫唾が走ったアセクシャル</p>
 		  	    <p>感情の神である。感情を感じる場合による、耳の髪と翼の色は変わる。通常の色は<span style="color: #FBD569;">金色</span>である。</p>
+            <br>
+            <a href="./gallery/HapPEmoShun.html" target="topframe">美術館へ行きますか？</a>
+            <br>
 		      </div>
 		      <br>
 		    </div>
