--- a/html/gallery/Cuowu.html
+++ b/html/gallery/Cuowu.html
@@ -21,7 +21,7 @@
 	  -->
     <meta charset="UTF-8">
     <!-- The title of the page shown in the browser tab. -->
-    <title>造化神録　美術館　虹川郷鬼</title>
+    <title>造化神録　美術館　錯誤</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../../css/default.css">
   </head>
