--- a/html/gallery/Ayn.html
+++ b/html/gallery/Ayn.html
@@ -41,7 +41,7 @@
           <h2 style="text-align: left;">レファレンス</h2><hr>
           <div class="flex-gallery">
             <div class="art-ref">
-              <img class="border" src="../../img/ref/AynRefCurrent.png" alt="アインのレファレンス" style="width: *; height: 256px;">
+              <img class="border" src="../../img/ref/AynRefCurrent.jpg" alt="アインのレファレンス" style="width: *; height: 256px;">
             </div>
           </div>
         </div>
