--- a/html/nizi.html
+++ b/html/nizi.html
@@ -509,7 +509,8 @@
 			      <p>ぬゑさか　岸姫（ぬゑさか　きしひめ）<br>
 			      Nuwesaka Kishihime</p>
 			      <p>種族：鵺</p>
-            <p>代名詞：she/he</p>
+            <p>性自認：バイジェンダー<br>
+            代名詞：she/he</p>
 			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			    </div>
 			    <br>
