Edit on line 513

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -510,7 +510,7 @@
 			      Nuwesaka Kishihime</p>
 			      <p>種族：鵺</p>
             <p>性自認：バイジェンダー<br>
-            代名詞：she/he</p>
+            代名詞：彼女／彼（she/he）</p>
 			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			    </div>
 			    <br>
