--- a/html/nizi.html
+++ b/html/nizi.html
@@ -399,6 +399,9 @@
 		  	    <p>種族：アンドロイド・戦争モデル</p>
             <p>性自認：<br>
             代名詞：</p>
+            <br>
+            <a href="./gallery/Idola.html" target="topframe">美術館へ行きますか？</a>
+            <br>
 		      </div>
 		      <br>
 		    </div>
