--- a/html/nizi.html
+++ b/html/nizi.html
@@ -79,7 +79,7 @@
 				    <p>体格が小さいため、子供と間違われる事もある。</p>
 				    <p>※年齢は、高緊張でスライドする。</p>
 				    <br>
-				    <a href="./gallery/SatokiNijikawa.html" target="topframe">美術館へ行きますか？</a>
+				    <a href="./gallery/nizi/SatokiNijikawa.html" target="topframe">美術館へ行きますか？</a>
 				    <br>
 			    </div>
 		    </section>
@@ -118,7 +118,7 @@
 				    <p>かつては郷鬼に敵対的だったが、その後は落ち着いてきた。ちなみに、通称にある「保護者」は自称であるよ。</p>
 				    <p>※チベット文字に「<span lang="bo" class="font-tibetan">ཝ་མོ་</span>」を書く。ワイリー方式に「<span lang="bo-Latn" class="font-latin">wa mo</span>」を書く。</p>
 				    <br>
-				    <a href="./gallery/Wamo.html" target="topframe">美術館へ行きますか？</a>
+				    <a href="./gallery/nizi/Wamo.html" target="topframe">美術館へ行きますか？</a>
 				    <br>
 			    </div>
 			    <br>
@@ -152,7 +152,7 @@
 				    年齢：１５歳</p>
 				    <p>とてつもなく優しいノンバイナリーの天狗である。心は残念ながら１２歳のそれに退行しています……。</p>
 				    <br>
-				    <a href="./gallery/Kiyoi.html" target="topframe">美術館へ行きますか？</a>
+				    <a href="./gallery/nizi/Kiyoi.html" target="topframe">美術館へ行きますか？</a>
 				    <br>
 			    </div>
 			    <br>
@@ -192,7 +192,7 @@
             雌雄性：アセクシャル</p>
             <p>自分の服を作るフェネックである。あたいの自己ケモノであるね。</p>
             <br>
-            <a href="./gallery/Youko.html" target="topframe">美術館へ行きますか？</a>
+            <a href="./gallery/nizi/Youko.html" target="topframe">美術館へ行きますか？</a>
             <br>
           </div>
           <br>
@@ -226,7 +226,7 @@
             代名詞：彼女（she/her）<br>
             雌雄性：オムニセクシャル</p>
             <br>
-            <a href="./gallery/Animus.html" target="topframe">美術館へ行きますか？</a>
+            <a href="./gallery/nizi/Animus.html" target="topframe">美術館へ行きますか？</a>
             <br>
           </div>
           <br>
@@ -254,7 +254,7 @@
 		  	    代名詞：奴／<ruby>奴<rt>イト</rt></ruby>（they/it）</p>
 		  	    <p>アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">عَيْن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʿAyn</span>」を書く。</p>
             <br>
-            <a href="./gallery/Ayn.html" target="topframe">美術館へ行きますか？</a>
+            <a href="./gallery/nizi/Ayn.html" target="topframe">美術館へ行きますか？</a>
             <br>
 		  	  </div>
 		  	  <br>
@@ -283,7 +283,7 @@
             代名詞：奴（they/them）</p>
             <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Болормаа</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠪᠣᠯᠣᠷᠮᠠ</span>」を書く。</p>
             <br>
-            <a href="./gallery/Bolormaa.html" target="topframe">美術館へ行きますか？</a>
+            <a href="./gallery/nizi/Bolormaa.html" target="topframe">美術館へ行きますか？</a>
             <br>
           </div>
         </div>
@@ -340,7 +340,7 @@
             <p>——タモードヴァーラムについて</p>
             <p>——佰萬について</p>
             <br>
-            <a href="./gallery/Cuowu.html" target="topframe">美術館へ行きますか？</a>
+            <a href="./gallery/nizi/Cuowu.html" target="topframe">美術館へ行きますか？</a>
             <br>
           </div>
           <br>
@@ -373,7 +373,7 @@
 		  	    雌雄性：性行為を虫唾が走ったアセクシャル</p>
 		  	    <p>感情の神である。感情を感じる場合による、耳の髪と翼の色は変わる。通常の色は<span style="color: #FBD569;">金色</span>である。</p>
             <br>
-            <a href="./gallery/HapPEmoShun.html" target="topframe">美術館へ行きますか？</a>
+            <a href="./gallery/nizi/HapPEmoShun.html" target="topframe">美術館へ行きますか？</a>
             <br>
 		      </div>
 		      <br>
@@ -400,7 +400,7 @@
             <p>性自認：<br>
             代名詞：</p>
             <br>
-            <a href="./gallery/Idola.html" target="topframe">美術館へ行きますか？</a>
+            <a href="./gallery/nizi/Idola.html" target="topframe">美術館へ行きますか？</a>
             <br>
 		      </div>
 		      <br>
