--- a/html/gallery/nizi/Bolormaa.html
+++ b/html/gallery/nizi/Bolormaa.html
@@ -23,7 +23,7 @@
     <!-- The title of the page shown in the browser tab. -->
     <title>造化神録　美術館　ボルルマー</title>
     <!-- The CSS stylesheet. -->
-    <link rel="stylesheet" href="../../css/default.css">
+    <link rel="stylesheet" href="../../../css/default.css">
   </head>
   <body>
     <header>
@@ -41,7 +41,7 @@
           <h2 style="text-align: left;">レファレンス</h2><hr>
           <div class="flex-gallery">
             <div class="art-ref">
-              <img class="border" src="../../img/ref/BolormaaRefCurrent.png" alt="ボルルマーのレファレンス" style="width: *; height: 256px;">
+              <img class="border" src="../../../img/ref/BolormaaRefCurrent.png" alt="ボルルマーのレファレンス" style="width: *; height: 256px;">
             </div>
           </div>
         </div>
