--- a/html/gallery/nizi/Bolormaa.html
+++ b/html/gallery/nizi/Bolormaa.html
@@ -35,7 +35,7 @@
 	  <article>
       <section class="section">
         <!-- 造化神録に戻る（Return to the Record） -->
-        <a href="../nizi.html#Bolormaa">←　造化神録に戻る</a>
+        <a href="../../nizi.html#Bolormaa">←　造化神録に戻る</a>
         <!-- 現在レファレンス（Current Ref Sheet） -->
         <div class="gallery">
           <h2 style="text-align: left;">レファレンス</h2><hr>
