Corrected the art pointers

--- a/html/gallery/nizi/SatokiNijikawa.html
+++ b/html/gallery/nizi/SatokiNijikawa.html
@@ -50,33 +50,33 @@
           <h2 style="text-align: left;">美術品</h2><hr>
           <div class="flex-gallery">
             <div class="art-gallery">
-              <img class="border" src="../../img/gallery/SatokiNijikawa/虹川郷鬼（PC-98版）.png" alt="虹川郷鬼（PC-98版）" style="width: 256px; height: 256px;">
+              <img class="border" src="../../../img/gallery/SatokiNijikawa/虹川郷鬼（PC-98版）.png" alt="虹川郷鬼（PC-98版）" style="width: 256px; height: 256px;">
               <p class="caption">虹川郷鬼（PC-98版）</p>
             </div>
             <div class="art-gallery">
-              <img class="border" src="../../img/gallery/SatokiNijikawa/郷鬼（スライムの姿）.png" alt="郷鬼（スライムの姿）" style="width: 256px; height: 256px;">
+              <img class="border" src="../../../img/gallery/SatokiNijikawa/郷鬼（スライムの姿）.png" alt="郷鬼（スライムの姿）" style="width: 256px; height: 256px;">
               <p class="caption">郷鬼（スライムの姿）</p>
             </div>
             <div class="art-gallery">
-              <img class="border" src="../../img/gallery/SatokiNijikawa/ポグ.gif" alt="ポグ" style="width: 256px; height: 256px;">
+              <img class="border" src="../../../img/gallery/SatokiNijikawa/ポグ.gif" alt="ポグ" style="width: 256px; height: 256px;">
               <p class="caption">ポグ</p>
             </div>
             <div class="art-gallery">
-              <img class="border" src="../../img/gallery/SatokiNijikawa/Satoki Sprite.png" alt="郷鬼のスプライト" style="width: 256px; height: 256px;">
+              <img class="border" src="../../../img/gallery/SatokiNijikawa/Satoki Sprite.png" alt="郷鬼のスプライト" style="width: 256px; height: 256px;">
               <p class="caption">郷鬼のスプライト</p>
             </div>
             <div class="art-gallery">
-              <img class="border" src="../../img/gallery/SatokiNijikawa/Satoki Sprite - Bra & Diaper.png" alt="郷鬼のスプライト・ブラジャーとオムツ" style="width: 256px; height: 256px;">
+              <img class="border" src="../../../img/gallery/SatokiNijikawa/Satoki Sprite - Bra & Diaper.png" alt="郷鬼のスプライト・ブラジャーとオムツ" style="width: 256px; height: 256px;">
               <p class="caption">郷鬼のスプライト・ブラジャーとオムツ</p>
             </div>
           </div>
           <div class="flex-gallery">
             <div class="art-gallery">
-              <img class="border" src="../../img/gallery/SatokiNijikawa/hold your pride flag!.png" alt="トランスゲンダーの旗を持つ郷鬼" style="width: 256px; height: 256px;">
+              <img class="border" src="../../../img/gallery/SatokiNijikawa/hold your pride flag!.png" alt="トランスゲンダーの旗を持つ郷鬼" style="width: 256px; height: 256px;">
               <p class="caption">トランスゲンダーの旗を持つ郷鬼</p>
             </div>
             <div class="art-gallery">
-              <img class="border" src="../../img/gallery/SatokiNijikawa/Throne.png" alt="王座に座る郷鬼" style="width: 256px; height: 256px;">
+              <img class="border" src="../../../img/gallery/SatokiNijikawa/Throne.png" alt="王座に座る郷鬼" style="width: 256px; height: 256px;">
               <p class="caption">王座に座る郷鬼</p>
             </div>
           </div>
