--- a/html/gallery/nizi/Kiyoi.html
+++ b/html/gallery/nizi/Kiyoi.html
@@ -50,7 +50,7 @@
           <h2 style="text-align: left;">美術品</h2><hr>
           <div class="flex-gallery">
             <div class="art-gallery">
-              <img class="border" src="../../img/gallery/Kiyoi/清（PC-98版）.png" alt="清（PC-98版）" style="width: 256px; height: 256px;">
+              <img class="border" src="../../../img/gallery/Kiyoi/清（PC-98版）.png" alt="清（PC-98版）" style="width: 256px; height: 256px;">
               <p class="caption">清（PC-98版）</p>
             </div>
           </div>
