Added art gallery for Elisabed

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -481,6 +481,9 @@
             雌雄性：アブロセクシャル</p>
 			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			      <p>※グルジア文字に「<span lang="ka" class="font-georgian">ელისაბედ ხიდირბეგიშვილი-გარსევანიშვილი-ფირცხალაიშვილი</span>」で書く。</p>
+				    <br>
+				    <a href="./gallery/nizi/ElisabedPirtskhalaishvili.html" target="topframe">美術館へ行きますか？</a>
+				    <br>
 			    </div>
 			    <br>
 		    </div>
