Added art gallery for Olha

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -512,6 +512,9 @@
             代名詞：</p>
 			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			      <p>※キリル文字に「<span lang="uk" class="font-cyrillic">Олга Юхимівна Литвина-Костюченко</span>」で書く。</p>
+				    <br>
+				    <a href="./gallery/nizi/OlhaYukhymivnaLytvyna.html" target="topframe">美術館へ行きますか？</a>
+				    <br>
 			    </div>
 			    <br>
 		    </div>
