Added art gallery for Song-Hee

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -543,6 +543,9 @@
             代名詞：</p>
 			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			      <p>※ハングルに「<span lang="ko" class="font-hangul">맹성희</span>」と<ruby>漢字<rt>ハンジャ</rt></ruby>に「<span lang="ko-Hani" class="font-hanja">孟聖姬</span>」で書く。</p>
+				    <br>
+				    <a href="./gallery/nizi/MaengSongHee.html" target="topframe">美術館へ行きますか？</a>
+				    <br>
 			    </div>
 			    <br>
 		    </div>
