Added art gallery for Kishihime

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -574,6 +574,9 @@
             <p>性自認：バイジェンダー<br>
             代名詞：彼女／彼（she/he）</p>
 			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
+				    <br>
+				    <a href="./gallery/nizi/KishihimeNuwesaka.html" target="topframe">美術館へ行きますか？</a>
+				    <br>
 			    </div>
 			    <br>
 		    </div>
