Added art gallery for Ilyinishna

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -604,6 +604,9 @@
             代名詞：</p>
 			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			      <p>※キリル文字に「<span lang="ru" class="font-cyrillic">Ильинишна Макаровна Образцова-Случевская</span>」で書く。</p>
+				    <br>
+				    <a href="./gallery/nizi/IlyinishnaMakarovnaObraztsova.html" target="topframe">美術館へ行きますか？</a>
+				    <br>
 			    </div>
 			    <br>
 		    </div>
