Added art gallery for Sanda

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -634,6 +634,9 @@
             代名詞：</p>
 			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
 			      <p>※ビルマ文字に「<span lang="my" class="font-myanmar">စန္ဒာခိုင်သိင်္ဂီထက်</span>」で書く。MLCTS式に「<span lang="my-Latn" class="font-latin">Canda Hkuing Singgi Htak</span>」で書く。</p>
+				    <br>
+				    <a href="./gallery/nizi/SandaKhaingTheingiHtet.html" target="topframe">美術館へ行きますか？</a>
+				    <br>
 			    </div>
 			    <br>
 		    </div>
