Added art gallery for Scarlet

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -664,6 +664,9 @@
             <p>性自認：<br>
             代名詞：</p>
 			      <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
+				    <br>
+				    <a href="./gallery/nizi/ScarlettWilliams.html" target="topframe">美術館へ行きますか？</a>
+				    <br>
 			    </div>
 			    <br>
 		    </div>
