Fixed awkward sentence structure on line 1513

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1510,7 +1510,7 @@
 				      能力：彼女自身の好みに合わせて時間を操作する程度の能力</p>
 				      <p>リリアンとラウレンティアのメイドである。</p>
 				      <p>邸宅に押し入る侵入者の処理を含む、メイドが持つ全ての義務を処理する。</p>
-				      <p>武器の選択はかなり……独特である。魅夜は戦闘で剣（ちなみに空力ではない）を使う事を好む。</p>
+              <p>武器の選択はかなり……独特である。魅夜は戦闘で剣を使う事を好む。（ちなみに空力ではない）</p>
 				      <p>剣と時間を操作する能力により、魅夜は侵入者にとって手ごわい敵になる。</p>
 				      <p>魅夜の義務には、ホスピタリティケアも含まれる。</p>
 				      <p>若いラウレンティアをトラブルから守る事を担当してる事で、一部の侵入者は魅夜を若い吸血鬼の母親と間違えた。母親じゃないよ。</p>
