Changed line 416 to `イルボスク語の名前（スポル文字）：Daanieelaa Nyströöm'

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -413,7 +413,7 @@
 			      <div class="body">
 			        <p>ダニエラ・ニストロム<br>
 				      <span lang="sv">Daniela Nyström</span></p>
-				      <p>イルボスク語の名前（スポル文字）：<br>
+				      <p>イルボスク語の名前（スポル文字）：Daanieelaa Nyströöm<br>
 				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
 			      </div>
 			      <br>
