Changed line 468 to `<p>イルボスク語の名前（スポル文字）：Kyrie Urgulania Arkadius Skaaełola<br>'

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -465,7 +465,7 @@
 			      <div class="body">
 			        <p>キリエ・ウルグラニア・アルカディアス・スケーウォラ<br>
 				      Kyrie Urgulania Arcadius Scaevola</p>
-				      <p>イルボスク語の名前（スポル文字）：<br>
+				      <p>イルボスク語の名前（スポル文字）：Kyrie Urgulania Arkadius Skaaełola<br>
 				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
 				      <p>スポルメーア民主共和国の大統領である。故郷はヘッスレルレフテオー村である。</p>
 			      </div>
